# CrossFetch

./: Caddyfile  README.md
.github/workflows/: release.yml
crossfetch/: Cargo.toml
crossfetch/src/: main.rs
